# sre_agent

./: .gitignore  DEMO-GUIDE.md  FULL-DEMO-PLAYBOOK.md  README.md  break-app.sh  cleanup.sh  fix-app.sh  generate-traffic.sh  pyproject.toml  requirements.txt  setup-sre-demo.sh
app/: package.json  server.js  web.config
app/public/: index.html
docs/: SCREENSHOTS.md
knowledge/: architecture.md  contacts.md  deployments.md  environment.md  known-issues.md  oncall.md  runbooks.md  slos.md
skills/app-service-troubleshooting/: SKILL.md  config.yaml
skills/daily-health-check/: SKILL.md  config.yaml
skills/incident-response/: SKILL.md  config.yaml
skills/performance-analysis/: SKILL.md  config.yaml
skills/sla-reporting/: SKILL.md  config.yaml
src/sre_agent/: __init__.py  agent.py  cli.py  config.py
src/sre_agent/azure/: __init__.py  alerts.py  client.py  monitor.py  resources.py
tests/: __init__.py  test_agent.py  test_config.py
tests/azure/: __init__.py  test_alerts.py  test_client.py  test_monitor.py  test_resources.py
tools/: README.md
tools/kusto/: availability-timeline.kql  document-processing-stats.kql  error-rate-by-endpoint.kql  recent-config-changes.kql  top-exceptions.kql
tools/link/: azure-portal-deeplinks.yaml  grafana-dashboard.yaml
tools/python/: app-health-checker.py  cost-estimator.py  dependency-mapper.py  incident-report-generator.py  response-time-analyzer.py  sla-calculator.py
